%%{init: {'theme': 'base', 'themeVariables': { 'primaryColor': '#3ECF8E'}}}%%
erDiagram
    users ||--o{ posts : "작성"
    users ||--o{ comments : "작성"
    posts ||--o{ comments : "포함"

    users {
        uuid id PK
        string email
        string name
        timestamp created_at
    }

    posts {
        uuid id PK
        uuid author_id FK
        string title
        text content
        timestamp created_at
        timestamp updated_at
    }

    comments {
        uuid id PK
        uuid post_id FK
        uuid author_id FK
        text content
        timestamp created_at
    }
